# ragfactory

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  release.py
.claude/plans/: phase-1b-detail.md  phase-1b-fixes.md  phase-1c.md  phase-1d.md  ragbuilder-architecture.md
.github/workflows/: ci.yml  publish.yml
docs/: SOTA_RAG_RESEARCH_REPORT.md
ragfactory/: __init__.py
ragfactory/api/: main.py
ragfactory/cli/: __init__.py  main.py
ragfactory/core/: __init__.py  _providers.py  compatibility.py  config.py  generator.py  validator.py  versions.py
ragfactory/templates/entrypoints/common/: .env.example.j2  Dockerfile.j2  README.md.j2  api.py.j2  docker-compose.yml.j2  eval.py.j2  pyproject.toml.j2
ragfactory/templates/entrypoints/langchain/: ingestion.py.j2  pipeline.py.j2  pipeline_agentic.py.j2
ragfactory/templates/entrypoints/llamaindex/: ingestion.py.j2  pipeline.py.j2  pipeline_agentic.py.j2
ragfactory/templates/stages/chunking/: contextual.py.j2  fixed.py.j2  late.py.j2  page_level.py.j2  proposition.py.j2  recursive.py.j2  semantic.py.j2
ragfactory/templates/stages/embedding/: bge_m3.py.j2  cohere.py.j2  gemini.py.j2  jina.py.j2  nomic.py.j2  openai.py.j2  voyage.py.j2
ragfactory/templates/stages/llm/: anthropic.py.j2  cohere_llm.py.j2  ollama.py.j2  openai.py.j2
ragfactory/templates/stages/reranker/: cohere.py.j2  colbert.py.j2  cross_encoder.py.j2  flashrank.py.j2
ragfactory/templates/stages/retrieval/: dense.py.j2  hybrid_rrf.py.j2  hybrid_weighted.py.j2  sentence_window.py.j2  small_to_big.py.j2
ragfactory/templates/stages/vectordb/: chromadb.py.j2  milvus.py.j2  pgvector.py.j2  pinecone.py.j2  qdrant.py.j2  weaviate.py.j2
research/: INDEX.md  RAG_RESEARCH_FINDINGS.md  chunking-strategies.md  embedding-models.md  graphrag-raptor-deep-dive.md  post-retrieval-optimization-and-advanced-generation.md  pre-retrieval-optimization-techniques.md  retrieval-strategies.md  vector-databases.md
tests/fixtures/: quick_start.yaml
tests/fixtures/stub_templates/entrypoints/common/: .env.example.j2  Dockerfile.j2  README.md.j2  api.py.j2  docker-compose.yml.j2  eval.py.j2  pyproject.toml.j2
tests/fixtures/stub_templates/entrypoints/langchain/: ingestion.py.j2  pipeline.py.j2  pipeline_agentic.py.j2
tests/fixtures/stub_templates/entrypoints/llamaindex/: ingestion.py.j2  pipeline.py.j2  pipeline_agentic.py.j2
tests/fixtures/stub_templates/stages/chunking/: contextual.py.j2
tests/fixtures/stub_templates/stages/embedding/: gemini.py.j2
tests/integration/: test_cli.py
tests/unit/: test_api.py  test_compatibility.py  test_config.py  test_generator.py  test_templates.py  test_validator.py
(+4 files in other folders)
